--- a/UniversityRegisterCourses/bin/view/mainView.fxml
+++ b/UniversityRegisterCourses/bin/view/mainView.fxml
@@ -24,7 +24,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.Tab?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/1"
+<BorderPane xmlns:fx="http://javafx.com/fxml/"
 	fx:controller="control.MainController" prefHeight="500.0"
 	prefWidth="1000.0">
 	<!-- TODO Add Nodes -->
