--- a/UniversityRegisterCourses/src/view/mainView.fxml
+++ b/UniversityRegisterCourses/src/view/mainView.fxml
@@ -1,33 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.text*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.Tab?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/"
-	fx:controller="control.MainController" prefHeight="500.0"
-	prefWidth="1000.0">
-	<!-- TODO Add Nodes -->
+<BorderPane prefWidth="1000" prefHeight="500"
+	xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="control.MainController">
+
 	<top>
 		<VBox>
 			<children>
@@ -35,23 +19,23 @@
 					<menus>
 						<Menu text="학사관리">
 							<items>
-								<MenuItem text="로그아웃" fx:id="menuLogout">
-								</MenuItem>
-								<MenuItem text="종료" fx:id="menuExit">
-								</MenuItem>
+								<MenuItem text="로그아웃" fx:id="menuLogout" />
+								<MenuItem text="종료" fx:id="menuExit" />
+							</items>
+						</Menu>
+
+
+						<Menu text="도움말">
+							<items>
+								<MenuItem text="프로그램 정보" fx:id="menuInfo" />
 							</items>
 						</Menu>
 					</menus>
-					<Menu text="도움말">
-						<items>
-							<MenuItem text="프로그램 정보" fx:id="menuInfo">
-							</MenuItem>
-						</items>
-					</Menu>
 				</MenuBar>
 			</children>
 		</VBox>
 	</top>
+
 	<center>
 		<TabPane tabClosingPolicy="UNAVAILABLE" fx:id="mainPane">
 			<tabs>
@@ -79,5 +63,5 @@
 			</tabs>
 		</TabPane>
 	</center>
-</BorderPane>
 
+</BorderPane>
