--- a/UniversityRegisterCourses/bin/view/mainView.fxml
+++ b/UniversityRegisterCourses/bin/view/mainView.fxml
@@ -24,9 +24,8 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.Tab?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/"
-	fx:controller="control.MainController" prefHeight="500.0"
-	prefWidth="1000.0">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="control.MainController" prefHeight="500.0" prefWidth="1000.0">
 	<!-- TODO Add Nodes -->
 	<top>
 		<VBox>
