--- a/UniversityRegisterCourses/bin/view/studentTab.fxml
+++ b/UniversityRegisterCourses/bin/view/studentTab.fxml
@@ -60,7 +60,7 @@
 		<Label text="학생 목록" layoutX="300.0" layoutY="30.0" />
 		<Button fx:id="btnStudentTatoList" text="학생 전체" layoutX="360.0"
 			layoutY="25.0" />
-		<TableView fx:id="studentTableView" layoutX="300..0"
+		<TableView fx:id="studentTableView" layoutX="300.0"
 			layoutY="55.0" prefHeight="370" prefWidth="700"></TableView>
 
 	</children>
